--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -1,14 +1,14 @@
 <app-header></app-header>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="dv-sidebr">
+<div class="">
+  <div class="row dv-row-dshbrd">
+    <div class="col-md-2 dv-sidebr">
 
       <app-sidebar></app-sidebar>
 
     </div>
-    <div class="dv-mainapp">
-      <div class="container-fluid">
+    <div class="col-md-10 dv-mainapp">
+      <div class="">
         <!-- CONTENT -->
         <div class="row">
           <div class="dv-headr">
