--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,4 @@ background: #414eae;width: 275px;height: 100px;margin-left: 115px;border-radius:
 .dv-tble i{cursor: pointer;}
 .dv-frm label{color: #666c7a;font-size: 11px;}
 .dv-frm small{color: red;}
+.dv-mainapp{overflow-y: auto;height:700px;}
