--- a/src/app/admin/equipment/equipment.component.html
+++ b/src/app/admin/equipment/equipment.component.html
@@ -3,13 +3,13 @@
 
 <div class="">
     <div class="row dv-row-dshbrd">
-<div class="dv-sidebr">
+<div class="col-md-2 dv-sidebr">
 
 <app-sidebar></app-sidebar>
 
 </div>
-<div class="dv-mainapp">
-    <div class="container-fluid">
+<div class="col-md-10 dv-mainapp">
+    <div class="">
         <!-- CONTENT -->
         <div class="row">
           <div class="dv-headr">
@@ -19,7 +19,7 @@
               <form [formGroup]="detailsForm" (ngSubmit)="submitForm(detailsForm.value)">
                
                 <div class="adddata">      
-                <div class="container">
+                <div class="">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
