--- a/src/app/admin/machine/machine.component.html
+++ b/src/app/admin/machine/machine.component.html
@@ -8,7 +8,7 @@
 
     </div>
     <div class="col-md-10 dv-mainapp">
-      <div class="container-fluid">
+      <div class="">
         <!-- CONTENT -->
         <div class="row">
           <div class="dv-headr">
