--- a/src/app/admin/plantprotection/plantprotection.component.html
+++ b/src/app/admin/plantprotection/plantprotection.component.html
@@ -1,25 +1,37 @@
 <app-header></app-header>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="dv-sidebr">
+<div class="">
+  <div class="row dv-row-dshbrd">
+    <div class="col-md-2 dv-sidebr">
 
       <app-sidebar></app-sidebar>
 
     </div>
-    <div class="dv-mainapp">
-      <div class="container-fluid">
+    <div class="col-md-10 dv-mainapp">
+      <div class="">
         <!-- CONTENT -->
         <div class="row">
           <div class="dv-headr">
-            InterCulture
+            Plant Protection
           </div>
           <div class="dv-frm">
             <form [formGroup]="detailsForm" (ngSubmit)="submitForm(detailsForm.value)">
 
               <div class="adddata">
-                <div class="container">
+                <div class="">
                   <div class="row">
+                    <div class="col-md-4">
+                      <div class="form-group">
+                        <label>Select Crop <small>*</small></label>
+                        <select  type="number" class="form-control" formControlName="CropId">
+                          <option value="">-- Select a Crop --</option>
+                          <option value={{crop.id}} *ngFor="let crop of cropList">
+                            {{crop.cropName}}
+                          </option>
+                        </select>
+                      </div>
+                    </div>
+
                     <div class="col-md-4">
                       <div class="form-group">
                         <label>Select Farmer <small>*</small></label>
@@ -30,10 +42,6 @@
                           </option>
                         </select>
                       </div>
-                    </div>
-
-                    <div class="col-md-4">
-                     
                     </div>
                     <div class="col-md-4">
 
@@ -134,6 +142,7 @@
             <table class="table">
               <thead>
                 <tr>
+                  <th scope="col">Crop</th>
                   <th scope="col">Farmer</th>
                   <th scope="col">Added Date</th>
                   <th scope="col">Prime Mover Used</th>
@@ -144,10 +153,11 @@
               </thead>
               <tbody>
                 <tr *ngFor="let tddata of TableData">
-                  <td>{{getValue(tddata.farmerid,'farmer')}}</td>
+                  <td>{{tddata.farmerDetail.crop.cropName}}</td>
+                  <td>{{tddata.farmerDetail.fullName}}</td>
                   <td>{{tddata.createdDateUtc}}</td>
-                  <td>{{getValue(tddata.machineId,'machine')}}</td>
-                  <td>{{getValue(tddata.equipmentId,'equip')}}</td>
+                  <td>{{tddata.machine.name}}</td>
+                  <td>{{tddata.equipment.name}}</td>
                   <td>{{tddata.operationalEnergy}}</td>
                   <td><i class="fa fa-eye" (click)="editData(tddata.id)"></i>&nbsp;&nbsp;
                     <i class="fa fa-edit" (click)="editData(tddata.id)"></i>&nbsp;&nbsp;
@@ -157,6 +167,11 @@
 
               </tbody>
             </table>
+            <div>
+              <button (click)="viewMore('front')" [disabled] = "!moreExist" style="float: right;" class="fa fa-arrow-circle-right" aria-hidden="true"></button>
+              <button (click)="viewMore('back')"  [disabled] = "take == 1" style="float: right;" class="fa fa-arrow-circle-left" aria-hidden="true"></button>
+           
+            </div>
           </div>
 
         </div>
