--- a/src/app/admin/fertilizer/fertilizer.component.html
+++ b/src/app/admin/fertilizer/fertilizer.component.html
@@ -1,14 +1,14 @@
 <app-header></app-header>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="dv-sidebr">
+<div class="">
+  <div class="row dv-row-dshbrd">
+    <div class="col-md-2 dv-sidebr">
 
       <app-sidebar></app-sidebar>
 
     </div>
-    <div class="dv-mainapp">
-      <div class="container-fluid">
+    <div class="col-md-10 dv-mainapp">
+      <div class="">
         <!-- CONTENT -->
         <div class="row">
           <div class="dv-headr">
@@ -18,7 +18,26 @@
             <form [formGroup]="detailsForm" (ngSubmit)="submitForm(detailsForm.value)">
 
               <div class="adddata">
-                <div class="container">
+                <div class="">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <div class="form-group">
+                        <label>Select Crop <small>*</small></label>
+                        <select  type="number" class="form-control" formControlName="CropId">
+                          <option value="">-- Select a Crop --</option>
+                          <option value={{crop.id}} *ngFor="let crop of cropList">
+                            {{crop.cropName}}
+                          </option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      
+                    </div>
+                    <div class="col-md-4">
+                      
+                    </div>
+                  </div>
                   <div class="row">
                     <div class="col-md-4">
                       <div class="form-group">
@@ -74,20 +93,20 @@
                   <div class="row">
                     <div class="col-md-4">
                       <div class="form-group">
-                        <label>Material  </label>
+                        <label>Material   <small>*</small></label>
                         <input class="form-control"  type="text" formControlName="Material2">
 
                       </div>
                     </div>
                     <div class="col-md-4">
                       <div class="form-group">
-                        <label>Quantity (Kg) </label>
+                        <label>Quantity (Kg)  <small>*</small></label>
                         <input class="form-control" min="0" type="number" formControlName="QtyKgPHa2">
                       </div>
                     </div>
                     <div class="col-md-4">
                       <div class="form-group">
-                        <label>Material </label>
+                        <label>Material  <small>*</small></label>
                         <input class="form-control"  type="text" formControlName="Material3">
 
                       </div>
@@ -96,7 +115,7 @@
                   <div class="row">
                     <div class="col-md-4">
                       <div class="form-group">
-                        <label>Quantity (Kg) </label>
+                        <label>Quantity (Kg) <small>*</small></label>
                         <input class="form-control" min="0" type="number" formControlName="QtyKgPHa3">
                       </div>
                     </div>
@@ -104,14 +123,14 @@
                     <div class="col-md-4">
 
                       <div class="form-group">
-                        <label>Material </label>
+                        <label>Material  <small>*</small></label>
                         <input class="form-control" type="string" formControlName="Material4">
                       </div>
                     </div>
 
                     <div class="col-md-4">
                       <div class="form-group">
-                        <label>Quantity (KG)</label>
+                        <label>Quantity (KG) <small>*</small></label>
                         <input class="form-control" min="0" type="number" formControlName="QtyKgPHa4">
                       </div>
                     </div>
@@ -128,6 +147,7 @@
             <table class="table">
               <thead>
                 <tr>
+                  <th scope="col">Crop</th>
                   <th scope="col">Farmer</th>
                   <th scope="col">Added Date</th>
                   <th scope="col">Labour Used</th>
@@ -139,7 +159,8 @@
               </thead>
               <tbody>
                 <tr *ngFor="let tddata of TableData">
-                  <td>{{getValue(tddata.farmerid,'farmer')}}</td>
+                  <td>{{tddata.farmerDetail.crop.cropName}}</td>
+                  <td>{{tddata.farmerDetail.fullName}}</td>
                   <td>{{tddata.createdDateUtc}}</td>
                   <td>{{tddata.labourer}}</td>
                   <td>{{tddata.material1}}</td>
@@ -153,6 +174,11 @@
 
               </tbody>
             </table>
+            <div>
+              <button (click)="viewMore('front')" [disabled] = "!moreExist" style="float: right;" class="fa fa-arrow-circle-right" aria-hidden="true"></button>
+              <button (click)="viewMore('back')"  [disabled] = "take == 1" style="float: right;" class="fa fa-arrow-circle-left" aria-hidden="true"></button>
+           
+            </div>
           </div>
 
         </div>
