--- a/src/app/admin/seedbeed/seedbeed.component.html
+++ b/src/app/admin/seedbeed/seedbeed.component.html
@@ -23,7 +23,7 @@
                     <div class="col-md-4">
                       <div class="form-group">
                         <label>Select Crop <small>*</small></label>
-                        <select (change)="getFarmer()" type="number" class="form-control" formControlName="CropId">
+                        <select  type="number" class="form-control" formControlName="CropId">
                           <option value="">-- Select a Crop --</option>
                           <option value={{crop.id}} *ngFor="let crop of cropList">
                             {{crop.cropName}}
@@ -149,8 +149,9 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th scope="col">Type Of Operation</th>
+                  <th scope="col">Crop</th>
                   <th scope="col">Farmer</th>
+                  <th scope="col">Type Of Operation</th>
                   <th scope="col">Added Date</th>
                   <th scope="col">Prime Mover Used</th>
                   <th scope="col">Implement Used </th>
@@ -160,11 +161,12 @@
               </thead>
               <tbody>
                 <tr *ngFor="let tddata of TableData">
+                  <td>{{tddata.farmerDetail.crop.cropName}}</td>
+                  <td>{{tddata.farmerDetail.fullName}}</td>
                   <td>{{tddata.typeOperation}}</td>
-                  <td>{{getValue(tddata.farmerid,'farmer')}}</td>
                   <td>{{tddata.createdDateUtc}}</td>
-                  <td>{{getValue(tddata.machineId,'machine')}}</td>
-                  <td>{{getValue(tddata.equipmentId,'equip')}}</td>
+                  <td>{{tddata.machine.name}}</td>
+                  <td>{{tddata.equipment.name}}</td>
                   <td>{{tddata.operationalEnergy}}</td>
                   <td><i class="fa fa-eye" (click)="editData(tddata.id)"></i>&nbsp;&nbsp;
                     <i class="fa fa-edit" (click)="editData(tddata.id)"></i>&nbsp;&nbsp;
@@ -174,6 +176,11 @@
 
               </tbody>
             </table>
+            <div>
+              <button (click)="viewMore('front')" [disabled] = "!moreExist" style="float: right;" class="fa fa-arrow-circle-right" aria-hidden="true"></button>
+              <button (click)="viewMore('back')"  [disabled] = "take == 1" style="float: right;" class="fa fa-arrow-circle-left" aria-hidden="true"></button>
+           
+            </div>
           </div>
 
         </div>
