--- a/src/app/admin/sidebar/sidebar.component.css
+++ b/src/app/admin/sidebar/sidebar.component.css
@@ -26,5 +26,5 @@
 .dv-navbar{padding-left: 2px; padding-right: 2px;}
 
 @media  (max-width:600px) {
-
+    .admin-sidebar{position: static !important;}
 }
