--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,9 +1,51 @@
 
+<!--For mobile-->
+<nav class="dv-nvbr-mbile navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+     
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse " id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li (click)="toComponent('dashbaord')">Dashboard</li>
+        <li (click)="toComponent('user')">User</li>
+        <li (click)="toComponent('farmer')">Farmer</li>
+        <li (click)="toComponent('machine')"> Prime Mover</li>
+        <li (click)="toComponent('equip')">Equipmnt</li>
+        <li class="dropdown">
+          <p href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Agriculture <span class="caret"></span></p>
+          <ul class="dropdown-menu">
+            <li (click)="toComponent('seed')">Seed Beed</li>
+            <li (click)="toComponent('sow')">Sowing</li>
+            <li (click)="toComponent('ferti')">Fertilizer</li>
+            <li (click)="toComponent('inter')">InterCulture</li>
+            <li (click)="toComponent('plant')">Plant Protection</li>
+            <li (click)="toComponent('irri')">Irrigation</li>
+            <li (click)="toComponent('harvest')">Harvesting</li>
+          </ul>
+        </li>
+        <li (click)="logOut()">Log Out</li>
+
+      </ul>
+     
+      
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<!--For browser-->
 <nav class="navbar navbar-light bg-light dv-navbar">
   <div class="container-fluid">
-    <div class="toggle-bar">
-      <i  class="fa fa-bars" aria-hidden="true"></i>
-  </div>
+  
     <a *ngIf="token == null" data-toggle="modal" data-target="#logInModel" class="navbar-brand dv-lgin">Login</a>
     <a *ngIf="token != null" (click)="logOut()" class="navbar-brand dv-lgin">Logout</a>
   </div>
